test/Exercism.Analyzers.CSharp.IntegrationTests/Solutions/Errors/WritesToConsole/ConsoleErrorWriteLine/Errors.cs
using System;

public static class Errors
{
    public static void Test()
    {
        Console.Error.WriteLine("Test");
    }
}